# bench-murmur3

./: Cargo.toml  README.md
benches/: murmur3_benchmark.rs
src/: lib.rs
