[package]
name = "bench-murmur3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mur3 = "0.1"
murmur3 = "0.5.1"
rand = "0.8.5"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "murmur3_benchmark"
harness = false
